Fixed large spacing between about and skills section

--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@ body {
 .right-about {
   /* background-color: rgb(183, 243, 44); */
   width: 35rem;
-  height: 40rem;
+  height: 33rem;
   margin-left: 4rem;
 }
 
